<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.edgar.optotypedevelope.LoginActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">


        <ImageView
            android:id="@+id/imageViewIconEye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ojo_icon"
            android:layout_above="@+id/editTextUserNameLogin"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="38dp"/>

        <EditText
            android:id="@+id/editTextUserNameLogin"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:hint="@string/user_name_default"
            android:layout_marginBottom="47dp"
            android:layout_above="@+id/editTextViewPassWord"
            android:layout_alignStart="@+id/editTextViewPassWord"
            android:layout_marginStart="13dp"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:id="@+id/editTextViewPassWord"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/password_default"
            android:layout_above="@+id/buttonLogin"
            android:layout_alignStart="@+id/buttonLogin"
            android:layout_marginBottom="47dp"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:text="@string/button_login"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="206dp"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

</LinearLayout>
