<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.edgar.optotypedevelope.InteractionActivity"
    android:orientation="horizontal"
    android:gravity="center">

    <!-- left layout-->
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewInteractionPatient"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/usuario_icon"/>

        <TextView
            android:id="@+id/textViewNAmePatient"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="Name 1 Name 2"
            android:typeface="sans"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:textSize="25dp"/>

        <TextView
            android:id="@+id/textViewLastnamePatient"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="Lastname 1 Lastname 2"
            android:typeface="sans"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:textSize="25dp"/>

        <TextView
            android:id="@+id/textYearsPatient"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="edad"
            android:typeface="sans"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:textSize="25dp"/>

        <ImageView
            android:id="@+id/imageInteractionEmotion"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="100dp"
            android:layout_gravity="center"
            android:src="@drawable/emotion_example"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <Button
                android:layout_width="250dp"
                android:layout_height="20dp"

                android:layout_marginTop="100dp"
                android:layout_marginLeft="10dp" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="90dp"
                android:src="@drawable/loading_flag"/>


        </LinearLayout>

    </LinearLayout>

    <!-- rigth layout -->
    <LinearLayout
        android:layout_width="900dp"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <!--left layout -->
        <LinearLayout
            android:layout_width="600dp"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageViewOptotype"
                android:layout_width="350dp"
                android:layout_height="350dp"
                android:layout_gravity="center"
                android:layout_marginLeft="150dp"
                android:src= "@drawable/barco_1"
                android:tag="@string/option"/>

            <TextView
                android:id="@+id/textDebug"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="Debug"/>

        </LinearLayout>

        <!-- rigth layout-->
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageOptotypeOptionA"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/sol_1"
                android:tag="@string/optionA"/>

            <ImageView
                android:id="@+id/imageOptotypeOptionB"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/estrella_1"
                android:tag="@string/optionB"/>

            <ImageView
                android:id="@+id/imageOptotypeOptionC"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/barco_1"
                android:tag="@string/optionC"/>

            <TextView
                android:id="@+id/textDebug2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="Debug"/>


        </LinearLayout>

    </LinearLayout>

</LinearLayout>
